commit final 10 changes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -364,12 +364,11 @@ footer a{
     font-size: 0.9rem;
 }
 nav .menu-btn{
-    display: none;
+    display: none;  
 }
-
-@media(min-height:2200px){
+@media(max-width:1140px){
     .content{
-        width: 50%;
+        width: 100%;
     }
     .model{
         width: 400px;
@@ -381,20 +380,6 @@ nav .menu-btn{
     .main-text h1{
         font-size: 3rem;
 
-    }
-    .model img{
-        margin-top: -900px;
-        margin-bottom: 7px;
-    }
-    .main-text h1{
-        margin-top: -750px;
-        margin-bottom: 10px;
-    }
-    #skills{
-        width: 100%;
-        justify-content: space-between;
-        padding-left: 40px;
-        margin-top: -1400px;
     }
     .box1,.box2,.box3 {
         flex-grow: 0.5; 
